# cherry-server

./: .env  Cargo.toml
migrations/: 1_user.sql
src/: config.rs  main.rs
src/dao/: user_dao.rs
src/handlers/: user_handler.rs
src/models/: user.rs
