[package]
name = "cherry-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
jsonwebtoken = "8.1.1"
serde = { version = "1.0.145", features = ["derive"] }
env_logger = "0.8"
log = "^0.4"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres", "chrono" ] }
chrono =  { version = "0.4.19", features = ["serde"] }
clap = { version = "3", features = ["derive"]}
dotenv = "0.15.0"
